# rping

./: .gitignore  20240524164252.xlsx  Cargo.toml  config.toml  readme.md
src/: commands.rs  main.rs
src/bll/: exwaybill.rs  invoice_details.rs  mod.rs  tools.rs
src/commons/: cfgs.rs  common.rs  consts.rs  global.rs  mod.rs  model.rs
src/utils/: cfgs.rs  common.rs  get_config.rs  mod.rs
