[package]
name = "rping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
dns-lookup = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
surge-ping = "0.8.0"
anyhow = { version = "1.0.71" }
reqwest = "0.11.18"
toml = "0.7.4"
parking_lot = "0.12.1"
once_cell = "1.18.0"
lazy_static = "1.4.0"
flexi_logger = "0.25.5"
log = "0.4.18"
chrono = { version = "0.4.26" }
