[package]
name = "rping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
dns-lookup = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
surge-ping = "0.8.0"
anyhow = { version = "1.0.71" }
reqwest = "0.11.18"
toml = "0.7.4"
parking_lot = "0.12.1"
once_cell = "1"
lazy_static = "1"
log = "0.4"
ftlog = "0.2"
calamine = "0.22"
time = { version = "0.3.30", features = ["macros"] }
chrono = { version = "0.4.26" }
raw-cpuid = "11.0.1"
clap = { version = "4.4", features = ["derive"] }
[features]
cpu = []
ping = ["init"]
excel = ["init"]
test = []
init = []
