[package]
name = "rping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
dns-lookup = "2.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
surge-ping = "0.8"
parking_lot = "0.12"
once_cell = "1"
lazy_static = "1"
log = "0.4"
ftlog = "0.2"
raw-cpuid = "11.0"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
async-channel = "2.3"
reqwest = { version = "0.12", features = ["json"] }
time = { version = "0.3", features = ["macros"] }
rust_xlsxwriter = "0"
calamine = "0.24"
anyhow = "1.0"
rust_decimal = "1.35"
chrono = "0.4"
redis = "0.25"
sea-orm = { version = "0.12", features = [
    "macros",
    "runtime-tokio-native-tls",
    "debug-print",
    "sqlx-sqlite",
] }
[features]
cpu = []
ping = []
excel = []
ex_waybill = []
